---------------------------------------------------------------------------------------------------
Version: 5.1.12
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 5.1.11
Date: 2020-09-30
  Bugfixes:
    - Fixed GUI not updating when loading a preset and "Close GUI after loading" is active
---------------------------------------------------------------------------------------------------
Version: 5.1.10
Date: 2020-09-28
  Bugfixes:
    - Fixed tooltips not being updated correctly
---------------------------------------------------------------------------------------------------
Version: 5.1.9
Date: 2020-09-28
  Changes:
    - Pressing E or Escape closes the gui
    - Added a pin button to the gui, to keep it open when pressing E/Escape
---------------------------------------------------------------------------------------------------
Version: 5.1.8
Date: 2020-09-20
  Changes:
    - Added mod setting to keep the gui open after loading a preset
    - Highlight the button of the last loaded preset.
  Bugfixes:
    - Fixed the button showing up when starting a new game even when "Hide button" is enabled
---------------------------------------------------------------------------------------------------
Version: 5.1.7
Date: 2020-09-15
  Bugfixes:
    - Fixed entities being upgraded when removing modules
---------------------------------------------------------------------------------------------------
Version: 5.1.6
Date: 2020-09-13
  Bugfixes:
    - Fixed unreproducible error when editing a scenario in the map editor
    - Fixed error when removing a machine that requested multiple modules to be inserted
---------------------------------------------------------------------------------------------------
Version: 5.1.5
Date: 2020-09-09
  Features:
    - The gui can be opened by right-clicking a Module Inserter
    - Added hotkey to toggle the gui (Default: Ctrl + I)