@@ -2,6 +2,9 @@
 Version: 5.1.12
 Date: ????
   Changes:
+    - Added an entry when an entity is removed from AutoTrash configurations due to mod changes
+  Bugfixes:
+    - Fixed crash when updating to a new version and at the same time another mod changes/removes entities
 ---------------------------------------------------------------------------------------------------
 Version: 5.1.11
 Date: 2020-09-30
